# parallel-programming

./: CMakeLists.txt  LICENSE  README.md
01_matrix_sum/: CMakeLists.txt  main.cpp  matrix_sum.cpp  matrix_sum.h
02_broadcast/: CMakeLists.txt  broadcast.cpp  broadcast.h  main.cpp
03_shell_sort_batcher_merge/: CMakeLists.txt  main.cpp  shell_sort_batcher_merge.cpp  shell_sort_batcher_merge.h
04_simpson_method_seq/: CMakeLists.txt  main.cpp  simpson_method.cpp  simpson_method.h
05_simpson_method_omp/: CMakeLists.txt  main.cpp  simpson_method.cpp  simpson_method.h
06_simpson_method_tbb/: CMakeLists.txt  main.cpp  simpson_method.cpp
07_simpson_method_std/: CMakeLists.txt  main.cpp  simpson_method.cpp  simpson_method.h
reports/: 03_shell_sort_batcher_merge.tex  04_05_06_simpson_method.tex
